# demo-application

./: LICENSE  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/release/: output.json
android/app/src/androidTest/java/com/hy/wasmandroid/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: android_metadata.json
android/app/src/main/java/com/hy/wasmandroid/: ElementType.java  GameCanvas.java  GuiContext.java  MainActivity.java  Wasm.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/hy/wasmandroid/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
manager/: Cargo.toml
manager/src/: lib.rs
modules/: Dockerfile  README.md  index.js  package-lock.json  package.json
modules/public/android_demo/: android.c  android.wasm  android_bmp_grayscale.c  android_bmp_grayscale.wasm  android_bmp_grayscale_metadata.json  android_bmp_invert.c  android_bmp_invert.wasm  android_bmp_invert_metadata.json  android_build.sh  android_canvas.c  android_canvas.wasm  android_canvas_metadata.json  android_canvas_real.c  android_canvas_real.wasm  android_canvas_real_metadata.json  android_chatbot.c  android_chatbot.wasm  android_chatbot_metadata.json  android_metadata.json
modules/public/dynamic_linking/: build.sh  main.c  main.json  main.wasm  shared.h  side.c  side.json  side.wasm
wasmtime_based_runtime/: .gitignore  Cargo.toml
wasmtime_based_runtime/.cargo/: config
wasmtime_based_runtime/src/: global.rs  host.rs  leb128.rs  lib.rs  main.rs
wasmtime_based_runtime/src/android/: gui.rs  java.rs
