[package]
name = "manager"
version = "0.1.0"
authors = ["daubaris <paulius.daubaris@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
anyhow = "1.0.31"
serde_derive = "1.0.111"
serde = "1.0.111"
regex = "1"
serde_json = "1.0.57"
android_logger = "0.8"
log = "0.4"

[dev-dependencies]
tempdir = "0.3.7"
